yaml_defination_files/14-PodWithCustomScheduler.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    name: multischeduler-example
spec:
  schedulerName: my-scheduler
  containers:
  - name: nginx
    image: nginx
