yaml_defination_files/16-PodwithConfigMap.yml
apiVersion: v1
kind: Pod
metadata:
 name: my-pod
spec:
 containers:
  - name: nginx
    image: nginx
