yaml_defination_files/17-PodwithConfigMap-2.yml
apiVersion: vi
kind: Pod
metadata:
  name: config-pod
spec:
  containers:
    - name: nginx-pod
      image: nginx
