yaml_defination_files/18-PodwithSecret.yml
# First create the secret with following commands
# kubectl create secret generic my-secret --from-literal=DB_PASSWORD=jan123
# If we want to create a secret definition file we have to encode the password values to put in definition.yml file
# echo -n "jan123" | base64

apiVersion: v1
kind: Pod
metadata:
  name: my-serect-pod
spec:
  containers:
    - name: nginx
      image: nginx
