yaml_defination_files/19-PodwithSecret-2.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-secret-pod
spec:
  containers:
    - name: nginx
      image: nginx
