yaml_defination_files/20-MultiContainer.yml
apiVersion: v1
kind: Pod
metadata:
  name: multicontainer-pod
spec:
  containers:
    - name: container-1
      image: nginx
    - name: container-2
      image: redis
