yaml_defination_files/22-PodwithVolume.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-vol
spec:
  containers:
    - name: alpine
      image: alpine
      command: ["bin/sh", "-c"]
      args: [ "shuf -i 0-100 -n 1 >> /opt/number.out"]
      volumeMounts:
        - name: data-volume
          mountPath: /opt
  volumes:
    - name: data-volume
      hostPath:
        path: /data
        type: Directory
