yaml_defination_files/32-PodWithPVC.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: use-pv
  name: use-pv
spec:
  containers:
  - image: nginx
    name: use-pv
    volumeMounts:
     - name: my-storage
       mountPath: /data
  volumes:
  - name: my-storage
    persistentVolumeClaim:
     claimName: my-pvc
