yaml_defination_files/Deployment-defination.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: my-app
    tier: frontend
spec:
 template:
  metadata:
    name: my-pod
    labels:
      app: my-app
      tier: frontend
  spec:
    containers:
      - name: nginx-container
        image: nginx
 replicas: 4
 selector:
  matchLabels:
    app: my-app
    tier: frontend
