yaml_defination_files/pod-defination.yml
apiVersion: v1
kind: Pod
metadata:
 name: myapp-pod
 labels:
   app: myapp
   type: frontend
spec:
 containers:
   - name: nginx-container
     image: nginx
